<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/iv_gatito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/perroygato"
        android:contentDescription="@string/iv_gatito"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_cat"
        android:text="@string/tv_titulo"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nombre_mascota"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rb_gatito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_gato"/>

        <RadioButton
            android:id="@+id/rb_perrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_perro"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textSize="18sp"
        android:onClick="totalPago"
        android:text="@string/btn_registrar"
        android:layout_marginTop="16dp"/>

</LinearLayout>
