<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/iv_patita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fondo_principal"
        android:contentDescription="@string/iv_patita"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textStyle="bold"
        android:textColor="@color/purple_cat"
        android:layout_marginTop="16dp"
        android:textSize="32sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_begin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:text="@string/btn_iniciar"
        android:onClick="beginRegister"
        android:layout_marginBottom="48dp"/>

</LinearLayout>